[package]
name = "gpn21-tron"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.17"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5.9"
rand = "^0.8.5"
env_logger = "^0.9.0"
ndarray = "^0.15.0"
ordered-float = "^3.7.0"
